--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Doug Rose # your name (or website title) here
 logo: "/images/profile_pic.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  I am a driven data analyst, actively pursuing opportunities to elevate my skills and bring meaningful contributions to an organization by uncovering the compelling stories embedded within the data. 
+  I am a driven data analyst, actively pursuing opportunities to elevate my skills and bring meaningful contributions to an organization by uncovering the compelling stories hidden within the data. 
   <br><br>
   Second description 
   <br><br>
