--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/profile_pic.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   I am a driven data analyst, actively pursuing opportunities to elevate my skills and bring meaningful contributions to an organization by uncovering the compelling stories hidden within the data. 
   <br><br>
-  Second description 
+  SQL | R | Excel | Tableau 
   <br><br>
   <a href="https://www.linkedin.com/in/doug-rose-3b2382234/">View My LinkedIn Profile</a> 
   
