--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   SQL | R | Excel | Tableau 
   <br><br>
-  <a href="https://www.linkedin.com/in/doug-rose-3b2382234/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/doug-rose-3b2382234/">LinkedIn Profile</a> 
   
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
