--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,10 @@ description: > # your text below (remove <br> elements if you don't need line br
   <a href="https://www.linkedin.com/in/doug-rose-3b2382234/">LinkedIn Profile</a>
   <br><br>
   <a href="https://github.com/drose1988">Github Profile</a> 
+  <br><br>
+  <a /aboutme.md>About Me</a>
+  ### [About Me](/aboutme.md)
+
   
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
